--- a/src/app/aaacesa/admin-user/detalle-user/detalle-user.component.html
+++ b/src/app/aaacesa/admin-user/detalle-user/detalle-user.component.html
@@ -1,87 +1,120 @@
-<div class="container clearfix">
-  <div class="col-md-12">
-    <div class="row">
-      <form #detailUserForm="ngForm">
-        <div class="row">
-          <div class="col-lg-10">
-            <div class="row">
-              <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
-                <div *ngIf="editing">
-                  <div class="row">
-                    <div class="col-md-4">
-                      <mat-form-field class="input-full-width">
-                        <input matInput type="text" [(ngModel)]="actualizaUser.Nombre" #nomUser="ngModel" id="nomUser" name="nomUser" placeholder="Nombre" required>
-                        <mat-error *ngIf="nomUser.dirty || nomUser.pristine">
-                          El campo Nombre es <strong>requerido</strong>
-                        </mat-error>
-                      </mat-form-field>
-                    </div>
-                    <div class="col-md-4">
-                      <mat-form-field class="input-full-width">
-                        <input type="text" matInput [(ngModel)]="actualizaUser.Paterno" #paternoUser="ngModel" id="paternoUser" name="paternoUser" placeholder="Apellido Paterno" required>
-                        <mat-error *ngIf="paternoUser.dirty || paternoUser.pristine">
-                          El campo Paterno es <strong>requerido</strong>
-                        </mat-error>
-                      </mat-form-field>
-                    </div>
-                    <div class="col-md-4 ml-auto">
-                      <mat-form-field class="input-full-width">
-                        <input type="text" matInput [(ngModel)]="actualizaUser.Materno" #maternoUser="ngModel" id="maternoUser" name="maternoUser" placeholder="Apellido Materno" required>
-                        <mat-error *ngIf="maternoUser.dirty || maternoUser.pristine">
-                          El campo Materno es <strong>requerido</strong>
-                        </mat-error>
-                      </mat-form-field>
-                    </div>
-                  </div>
-                </div>
-                <div *ngIf="!editing">
-                  <div title="Click to edit" (click)="edit(value)" tabindex="0" class="inline-edit">
-                    Nombre Completo
-                    <i class="cui-pencil"></i>
-                    {{value}}&nbsp;
-                  </div>
-                  <label class="block bold">{{nomUser}}</label>
+<h2 mat-dialog-title>Editar Usuario</h2>
+<mat-dialog-content class="mat-typography" *ngIf="!visible">
+  <div class="container mt-3 mb-5" *ngIf="!final">
+    <div class="col-md-12">
+      <div class="row">
+        <form #detailUserForm="ngForm">
+          <div class="row">
+            <div class="col">
+              <div class="row">
+                <div title="Click para editar" (click)="edit()" tabindex="0" class="input-full-width">
+                  Nombre Completo<i class="cui-pencil"></i>
                 </div>
               </div>
-              <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <label class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Correo</label>
-                <label class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ellipsis">{{mailUser}}</label>
+              <div class="row">
+                <div class="col">
+                  <mat-form-field class="input-full-width">
+                    <input matInput type="text" [disabled]="!disabled" [(ngModel)]="actualizaUser.Nombre" #nomUser="ngModel" id="nomUser" name="nomUser" placeholder="Nombre" required>
+                    <mat-error *ngIf="nomUser.dirty || nomUser.pristine">
+                      El campo Nombre es <strong>requerido</strong>
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+                <div class="col">
+                  <mat-form-field class="input-full-width">
+                    <input type="text" matInput [disabled]="!disabled" [(ngModel)]="actualizaUser.Paterno" #paternoUser="ngModel" id="paternoUser" name="paternoUser" placeholder="Apellido Paterno" required>
+                    <mat-error *ngIf="paternoUser.dirty || paternoUser.pristine">
+                      El campo Paterno es <strong>requerido</strong>
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+                <div class="col">
+                  <mat-form-field class="input-full-width">
+                    <input type="text" matInput [disabled]="!disabled" [(ngModel)]="actualizaUser.Materno" #maternoUser="ngModel" id="maternoUser" name="maternoUser" placeholder="Apellido Materno" required>
+                    <mat-error *ngIf="maternoUser.dirty || maternoUser.pristine">
+                      El campo Materno es <strong>requerido</strong>
+                    </mat-error>
+                  </mat-form-field>
+                </div>
               </div>
             </div>
-            <div class="row">&nbsp;</div>
-            <div class="row">
-              <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <label class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Perfil</label>
-                <label class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ellipsis">{{perfilUser}}</label>
-              </div>
-              <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <div *ngIf="editing">
-                  <label class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Teléfono</label>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="icon-phone"></i></span>
-                    </div>
-                    <input #inlineEditControl class="form-control" [required]="required" (blur)="onBlur($event)" [name]="value" [(ngModel)]="value" [type]="type" [placeholder]="telUser" />
-                  </div>
+            <div class="col">
+              <div class="row">
+                <div title="Click para editar" (click)="edit()" tabindex="1" class="input-full-width">
+                  Correo<i class="cui-pencil"></i>
                 </div>
-                <div *ngIf="!editing">
-                  <div title="Click para editar" (click)="edit(value)" (focus)="edit(value);" tabindex="0" class="inline-edit">
-                      Teléfono
-                    <i class="cui-pencil"></i>
-                    {{value}}&nbsp;
-                  </div>
-                  <label class="block bold">{{telUser}}</label>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <mat-form-field class="input-full-width">
+                    <input type="text" matInput [disabled]="!disabled"  [(ngModel)]="actualizaUser.Correo" #emailUser="ngModel" id="emailUser" name="emailUser" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,6})+$">
+                    <mat-error *ngIf="emailUser.dirty || emailUser.pristine">
+                      El formato del campo es <strong>incorrecto</strong>
+                    </mat-error>
+                    <mat-error *ngIf="emailUser.hasError('required')">
+                      El campo Correo es <strong>requerido</strong>
+                    </mat-error>
+                  </mat-form-field>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </form>
+          <div class="row">
+            <div class="col">
+              <div class="row">
+                <div title="Click para editar" (click)="edit()" tabindex="1" class="input-full-width">
+                  Perfil<i class="cui-pencil" *ngIf="data.tipoPerfil"></i>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <mat-form-field class="input-full-width">
+                    <select matNativeControl [disabled]="!disablePerfil" [(ngModel)]="actualizaPerfil.Perfil.ClavePerfil" #selPerfilUser="ngModel" name="selPerfil" required >
+                      <option label="--Selecciona el perfil --">--Selecciona el perfil --</option>
+                      <option *ngFor="let rol of getPerfilUser" [value]="rol.ClavePerfil" [selected]="rol.ClavePerfil==actualizaUser.Perfil.ClavePerfil">{{rol.ClavePerfil}} : {{ rol.DescripcionPerfil}} </option>
+                    </select>
+                    <mat-error *ngIf="selPerfilUser.hasError('required')">
+                      El campo Perfil es <strong>requerido</strong>
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <div class="col" title="Click para editar" (click)="edit()" tabindex="0">
+                  Teléfono<i class="cui-pencil"></i>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <mat-form-field class="input-full-width">
+                    <input type="text" [disabled]="!disabled" matInput [(ngModel)]="actualizaUser.Telefono" #telefonoUser="ngModel" id="telefonoUser" name="telefonoUser" [textMask]="{mask: phoneMask, guide: false, modelClean: true}" pattern="^\(?([0-9]{3})\)?[ ]?([0-9]{3})[-]?([0-9]{4})$" required>
+                    <mat-error *ngIf="telefonoUser.dirty || telefonoUser.pristine">
+                      El campo Teléfono es <strong>requerido</strong>
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col text-right">
+        <button *ngIf="disabled" type="button" class="btn btn-ghost-link btn-pill" (click)="detailUserForm.valid ? actualiza() : validar_campos(detailUserForm._directives)">Actualizar</button>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col align-self-center">
-      <button *ngIf="editing" type="button" class="btn btn-pill btn-primary" (click)="actualiza()">Actualizar</button>
+  <div class="container mt-3 mb-5" *ngIf="final">
+    <div class="row">
+      <div class="col">
+        <h2 class="text-center"> {{ mensaje }}</h2>
+      </div>
     </div>
   </div>
-</div>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-dialog-close class="btn btn-ghost-link btn-pill">Cerrar</button>
+</mat-dialog-actions>
