--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -113,7 +113,7 @@ small {
 
 //Links
 .page-item.active .page-link {
-  background-color: #CB1630 !important;
+  background-color: #D31E28 !important;
   border-color: none !important;
   border-radius: 100% !important;
   color: #FFF;
@@ -126,7 +126,7 @@ small {
 }
 .page-item .page-link:hover {
   color: #FFF !important;
-  background-color: #212649;
+  background-color: #183964;
   border-color: none !important;
   
 }
