--- a/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
@@ -1,4 +1,6 @@
 <!-- <h2 mat-dialog-title>Nuevo Previo</h2> -->
+
+<ngx-loading [show]="processingCreation"></ngx-loading>  
 <div mat-dialog-title>
   <div class="row justify-content-between">
     <div class="col">
@@ -279,7 +281,7 @@
                 <div class="row mb-1">
 
                   <!-- Start Left Inside -->
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-4">                                                                                                
+                  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">                                                                                                
 
                     <div class="col-12">
                       <h5 class="detail-text text-muted">Guia Master </h5>
@@ -309,7 +311,7 @@
                   <!-- End Left Inside -->
 
                   <!-- Start Right Inside -->
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-8">
+                  <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
 
                     <div class="row justify-content-end">
                       <div class="col-xs-12 col-sm-12 col-lg-8">
