--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -1,4 +1,5 @@
 <!-- <h2 mat-dialog-title>Nuevo Previo</h2> -->
+<ngx-loading [show]="processingCreation"></ngx-loading>
 <div mat-dialog-title>
   <div class="row justify-content-between">
     <div class="col">
