--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -1,4 +1,5 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
+<ngx-loading [show]="loading"></ngx-loading>      
 <div class="row justify-content-end">  
   <div class="col-lg-12 text-right">
     <button (click)="openDialog()" class="btn btn-pill btn-ghost-primary"> <i class="fas fa-plus-circle"></i> Crear Pre Alerta</button>    
@@ -6,8 +7,7 @@
 </div>
 
 <div class="animated fadeIn">
-  <div class="card">
-       
+  <div class="card">     
     <div class="card-body">
 
       <!-- Start Busqueda Superior -->
@@ -28,7 +28,7 @@
 
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" #dp="bsDatepicker" bsDatepicker [(ngModel)]="fechaPrevioSearch" placeholder="Fecha Previo">                
+                <input matInput type="text" #dp="bsDatepicker" bsDatepicker [(ngModel)]="fechaPrevioSearch" placeholder="Fecha Arribo">                
               </mat-form-field>
             </div>
 
